--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>c2d2acdf-b9df-49c4-8161-8e85c5fa30f8</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Everest Insight Bot - Sistema de Avaliação</title>
+    <meta name="description" content="Sistema de avaliação de conhecimentos para colaboradores" />
+    <meta name="author" content="Promatic Solutions" />
 
-    <meta property="og:title" content="c2d2acdf-b9df-49c4-8161-8e85c5fa30f8" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Everest Insight Bot" />
+    <meta property="og:description" content="Sistema de avaliação de conhecimentos para colaboradores" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
